--- a/templates/subscriber/landing-page.html
+++ b/templates/subscriber/landing-page.html
@@ -17,14 +17,14 @@
                 <span class="button-bar"></span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-header">Dropdown header</a>
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">One more separated link</a>
+{#                <a class="dropdown-header">Dropdown header</a>#}
+{#                <a class="dropdown-item" href="#">Action</a>#}
+{#                <a class="dropdown-item" href="#">Another action</a>#}
+{#                <a class="dropdown-item" href="#">Something else here</a>#}
+{#                <div class="dropdown-divider"></div>#}
+{#                <a class="dropdown-item" href="#">Separated link</a>#}
+{#                <div class="dropdown-divider"></div>#}
+{#                <a class="dropdown-item" href="#">One more separated link</a>#}
             </div>
         </div>
         <div class="navbar-translate">
@@ -205,12 +205,12 @@
                     </li>
                 </ul>
             </nav>
-            <div class="copyright">
-                 Nigerian Communications Commission &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>, All Rights Reserved
-            </div>
+{#            <div class="copyright">#}
+{#                 Nigerian Communications Commission &copy;#}
+{#                <script>#}
+{#                    document.write(new Date().getFullYear())#}
+{#                </script>, All Rights Reserved#}
+{#            </div>#}
         </div>
     </footer>
 </div>
