--- a/templates/subscriber/landing-page.html
+++ b/templates/subscriber/landing-page.html
@@ -182,35 +182,35 @@
     <footer class="footer footer-default">
         <div class="container">
             <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            IWBSRS
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://presentation.creative-tim.com">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                            MIT License
-                        </a>
-                    </li>
-                </ul>
+{#                <ul>#}
+{#                    <li>#}
+{#                        <a href="https://www.creative-tim.com">#}
+{#                            IWBSRS#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="http://presentation.creative-tim.com">#}
+{#                            About Us#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="http://blog.creative-tim.com">#}
+{#                            Blog#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">#}
+{#                            MIT License#}
+{#                        </a>#}
+{#                    </li>#}
+{#                </ul>#}
             </nav>
-{#            <div class="copyright">#}
-{#                 Nigerian Communications Commission &copy;#}
-{#                <script>#}
-{#                    document.write(new Date().getFullYear())#}
-{#                </script>, All Rights Reserved#}
-{#            </div>#}
+            <div class="copyright">
+                 isrs &copy;
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>, All Rights Reserved
+            </div>
         </div>
     </footer>
 </div>
