--- a/templates/subscriber/profile.html
+++ b/templates/subscriber/profile.html
@@ -26,14 +26,14 @@
                     <span class="button-bar"></span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-header">Dropdown header</a>
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">One more separated link</a>
+{#                    <a class="dropdown-header">Dropdown header</a>#}
+{#                    <a class="dropdown-item" href="#">Action</a>#}
+{#                    <a class="dropdown-item" href="#">Another action</a>#}
+{#                    <a class="dropdown-item" href="#">Something else here</a>#}
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a class="dropdown-item" href="#">Separated link</a>#}
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a class="dropdown-item" href="#">One more separated link</a>#}
                 </div>
             </div>
             <div class="navbar-translate">
@@ -253,31 +253,31 @@
       <footer class="footer footer-default">
         <div class="container">
             <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            IWBSRS
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://presentation.creative-tim.com">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                            MIT License
-                        </a>
-                    </li>
-                </ul>
+{#                <ul>#}
+{#                    <li>#}
+{#                        <a href="https://www.creative-tim.com">#}
+{#                            ISRS#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="http://presentation.creative-tim.com">#}
+{#                            About Us#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="http://blog.creative-tim.com">#}
+{#                            Blog#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">#}
+{#                            MIT License#}
+{#                        </a>#}
+{#                    </li>#}
+{#                </ul>#}
             </nav>
             <div class="copyright">
-                 Nigerian Communications Commission &copy;
+                 isrs &copy;
                 <script>
                     document.write(new Date().getFullYear())
                 </script>, All Rights Reserved
