--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -27,7 +27,8 @@
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
                 <a class="navbar-brand" href="#pablo" style="margin: -15px">
-                    <img src="{% static 'assets/img/logo.png' %}" alt="" style="width: 40%">
+{#                    <img src="{% static 'assets/img/logo.png' %}" alt="" style="width: 40%">#}
+                    ISRS
                 </a>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="example-navbar-primary">
