modified login page

--- a/templates/registration/accounts/login.html
+++ b/templates/registration/accounts/login.html
@@ -18,14 +18,14 @@
                 <span class="button-bar"></span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-header">Dropdown header</a>
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">One more separated link</a>
+{#                <a class="dropdown-header">Dropdown header</a>#}
+{#                <a class="dropdown-item" href="#">Action</a>#}
+{#                <a class="dropdown-item" href="#">Another action</a>#}
+{#                <a class="dropdown-item" href="#">Something else here</a>#}
+{#                <div class="dropdown-divider"></div>#}
+{#                <a class="dropdown-item" href="#">Separated link</a>#}
+{#                <div class="dropdown-divider"></div>#}
+{#                <a class="dropdown-item" href="#">One more separated link</a>#}
             </div>
         </div>
         <div class="navbar-translate">
@@ -35,7 +35,7 @@
                 <span class="navbar-toggler-bar bar3"></span>
             </button>
             <a class="navbar-brand" href="http://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
-                IWBSRS
+                ISRS
             </a>
         </div>
         <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
@@ -85,7 +85,8 @@
                     {% csrf_token %}
                     <div class="header header-primary text-center">
                         <div class="logo-container">
-                            <img src="{% static 'assets/img/logo.png' %}" alt="logo">
+{#                            <img src="{% static 'assets/img/logo.png' %}" alt="logo">#}
+                            ISRS
                         </div>
                     </div>
                     <div class="content">
@@ -100,31 +101,31 @@
     <footer class="footer">
         <div class="container">
             <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            IWBSRS
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://presentation.creative-tim.com">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                            MIT License
-                        </a>
-                    </li>
-                </ul>
+{#                <ul>#}
+{#                    <li>#}
+{#                        <a href="https://www.creative-tim.com">#}
+{#                            ISRS#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="http://presentation.creative-tim.com">#}
+{#                            About Us#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="http://blog.creative-tim.com">#}
+{#                            Blog#}
+{#                        </a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">#}
+{#                            MIT License#}
+{#                        </a>#}
+{#                    </li>#}
+{#                </ul>#}
             </nav>
             <div class="copyright">
-                 Nigerian Communications Commission &copy;
+                 isrs &copy;
                 <script>
                     document.write(new Date().getFullYear())
                 </script>, All Rights Reserved
