--- a/templates/subscriber/landing-page.html
+++ b/templates/subscriber/landing-page.html
@@ -34,7 +34,8 @@
                 <span class="navbar-toggler-bar bar3"></span>
             </button>
             <a class="navbar-brand" href="http://www.ncc.gov.ng" rel="tooltip" title="Nigerians Communications Commission" data-placement="bottom" target="_blank">
-                <img src="{% static 'assets/img/ncc-logo-001.png' %}" alt="logo" style="width: 40%">
+{#                <img src="{% static 'assets/img/ncc-logo-001.png' %}" alt="logo" style="width: 40%">#}
+                ISRS
             </a>
         </div>
         <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
