remove next of kin

--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -62,7 +62,7 @@
 
 {% block sideBar %}
     <div class="container-fluid">
-        <div class="row">django_migrations
+        <div class="row">
             <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
                 <img src="http://localhost:8000/media/{{ user.image }}" alt="" class="rounded-circle img-responsive img-raised" style="width: 50%; margin: 50px; margin-top: 20px; border: solid white"/>
                 <div style="margin-left: 5%; margin-top: -10%" class="text-muted">
