--- a/templates/subscriber/landing-page.html
+++ b/templates/subscriber/landing-page.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="content-center">
                 <br/><br/>
-                <h1 class="title">Integrated Web Based Sim Registration System</h1>
+                <h1 class="title">Integrated Sim Registration System</h1>
                 <div class="text-center">
                     <a href="#pablo" class="btn btn-info btn-icon  btn-icon-mini">
                         <i class="fa fa-facebook-square"></i>
