--- a/templates/subscriber/mobile_network_subscriber_detail.html
+++ b/templates/subscriber/mobile_network_subscriber_detail.html
@@ -39,11 +39,11 @@
                                 <i class="now-ui-icons objects_umbrella-13"></i> Bio data
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#profile" role="tab">
-                                <i class="now-ui-icons shopping_cart-simple"></i> Next of kin
-                            </a>
-                        </li>
+{#                        <li class="nav-item">#}
+{#                            <a class="nav-link" data-toggle="tab" href="#profile" role="tab">#}
+{#                                <i class="now-ui-icons shopping_cart-simple"></i> Next of kin#}
+{#                            </a>#}
+{#                        </li>#}
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#messages" role="tab">
                                 <i class="now-ui-icons shopping_shop"></i> Registered sim
@@ -98,40 +98,40 @@
                                     <a href="{% url 'subscriber:bio_data_edit' subscriber.id %}"><button class="btn btn-info btn-simple btn-round" type="button">Edit bio data</button></a>
                                 {% endif %}
                             </div>
-                            <div class="tab-pane" id="profile" role="tabpanel">
-                                <table class="table table-striped table-hover">
-                                    <tbody>
-                                    <tr>
-                                        <th scope="row">First name:</th>
-                                        <td>{{ subscriber.nextofkin.first_name }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Last name:</th>
-                                        <td>{{ subscriber.nextofkin.last_name }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Gender:</th>
-                                        <td>{{ subscriber.nextofkin.gender }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Relationship:</th>
-                                        <td>{{ subscriber.nextofkin.relationship }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Address:</th>
-                                        <td>{{ subscriber.nextofkin.address }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Phone number:</th>
-                                        <td>{{ subscriber.nextofkin.phone_number }}</td>
-                                    </tr>
-
-                                    </tbody>
-                                </table>
-                                {% if user.role == 'REGISTRATION AGENT' %}
-                                    <a href="{% url 'subscriber:next_of_kin_edit' subscriber.id %}"><button class="btn btn-info btn-simple btn-round" type="button">Edit next of kin</button></a>
-                                {% endif %}
-                            </div>
+{#                            <div class="tab-pane" id="profile" role="tabpanel">#}
+{#                                <table class="table table-striped table-hover">#}
+{#                                    <tbody>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">First name:</th>#}
+{#                                        <td>{{ subscriber.nextofkin.first_name }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Last name:</th>#}
+{#                                        <td>{{ subscriber.nextofkin.last_name }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Gender:</th>#}
+{#                                        <td>{{ subscriber.nextofkin.gender }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Relationship:</th>#}
+{#                                        <td>{{ subscriber.nextofkin.relationship }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Address:</th>#}
+{#                                        <td>{{ subscriber.nextofkin.address }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Phone number:</th>#}
+{#                                        <td>{{ subscriber.nextofkin.phone_number }}</td>#}
+{#                                    </tr>#}
+{##}
+{#                                    </tbody>#}
+{#                                </table>#}
+{#                                {% if user.role == 'REGISTRATION AGENT' %}#}
+{#                                    <a href="{% url 'subscriber:next_of_kin_edit' subscriber.id %}"><button class="btn btn-info btn-simple btn-round" type="button">Edit next of kin</button></a>#}
+{#                                {% endif %}#}
+{#                            </div>#}
                             <div class="tab-pane" id="messages" role="tabpanel">
                                 <table class="table table-striped table-hover">
                                     <tbody>
