--- a/templates/subscriber/profile.html
+++ b/templates/subscriber/profile.html
@@ -137,11 +137,11 @@
                                         <i class="now-ui-icons objects_umbrella-13"></i> Bio data
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="tab" href="#profile" role="tab">
-                                        <i class="now-ui-icons shopping_cart-simple"></i> Next of kin
-                                    </a>
-                                </li>
+{#                                <li class="nav-item">#}
+{#                                    <a class="nav-link" data-toggle="tab" href="#profile" role="tab">#}
+{#                                        <i class="now-ui-icons shopping_cart-simple"></i> Next of kin#}
+{#                                    </a>#}
+{#                                </li>#}
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#messages" role="tab">
                                         <i class="now-ui-icons shopping_shop"></i> Registered sim
@@ -194,38 +194,38 @@
                                 </table>
 
                             </div>
-                            <div class="tab-pane" id="profile" role="tabpanel">
-                                 <table class="table table-striped table-hover">
-                                    <tbody>
-                                    <tr>
-                                        <th scope="row">First name:</th>
-                                        <td>{{ user.nextofkin.first_name }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Last name:</th>
-                                        <td>{{ user.nextofkin.last_name }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Gender:</th>
-                                        <td>{{ user.nextofkin.gender }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Relationship:</th>
-                                        <td>{{ user.nextofkin.relationship }}</td>
-                                    </tr>
-                                     <tr>
-                                        <th scope="row">Address:</th>
-                                        <td>{{ user.nextofkin.address }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Phone number:</th>
-                                        <td>{{ user.nextofkin.phone_number }}</td>
-                                    </tr>
-
-                                    </tbody>
-                                </table>
-
-                            </div>
+{#                            <div class="tab-pane" id="profile" role="tabpanel">#}
+{#                                 <table class="table table-striped table-hover">#}
+{#                                    <tbody>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">First name:</th>#}
+{#                                        <td>{{ user.nextofkin.first_name }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Last name:</th>#}
+{#                                        <td>{{ user.nextofkin.last_name }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Gender:</th>#}
+{#                                        <td>{{ user.nextofkin.gender }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Relationship:</th>#}
+{#                                        <td>{{ user.nextofkin.relationship }}</td>#}
+{#                                    </tr>#}
+{#                                     <tr>#}
+{#                                        <th scope="row">Address:</th>#}
+{#                                        <td>{{ user.nextofkin.address }}</td>#}
+{#                                    </tr>#}
+{#                                    <tr>#}
+{#                                        <th scope="row">Phone number:</th>#}
+{#                                        <td>{{ user.nextofkin.phone_number }}</td>#}
+{#                                    </tr>#}
+{##}
+{#                                    </tbody>#}
+{#                                </table>#}
+{##}
+{#                            </div>#}
                             <div class="tab-pane" id="messages" role="tabpanel">
                                      <table class="table table-striped table-hover">
                                     <tbody>
