--- a/templates/subscriber/register_subscribers.html
+++ b/templates/subscriber/register_subscribers.html
@@ -15,7 +15,7 @@
                     </a>
                      <a href="{% url 'subscriber:capture_image' %}" class="list-group-item" style="border: none">Capture image</a>
                     <a href="{% url 'subscriber:add_subscriber' %}" class="list-group-item" style="border: none;">Bio data</a>
-                    <a href="{% url 'subscriber:add_subscriber_next_of_kin' %}" class="list-group-item" style="border: none">Next of kin</a>
+{#                    <a href="{% url 'subscriber:add_subscriber_next_of_kin' %}" class="list-group-item" style="border: none">Next of kin</a>#}
                     <a href="javascript:login()" class="list-group-item" style="border: none">Register sim</a>
                      <button class="btn btn-info btn-lg"><a href="{% url 'subscriber:mobile_subscribers'%}" style="text-decoration: none; color: white">See all subscribers</a></button>
                 </div>
