--- a/templates/subscriber/subscriber_profile_report.html
+++ b/templates/subscriber/subscriber_profile_report.html
@@ -52,36 +52,36 @@
             </tr>
             </tbody>
         </table>
-        <p class="bg-faded" style="padding: 5px">Next of kin</p>
-        <table class="table table-striped table-hover">
-            <tbody>
-            <tr>
-                <th scope="row">First name:</th>
-                <td>{{ subscriber.nextofkin.first_name }}</td>
-            </tr>
-            <tr>
-                <th scope="row">Last name:</th>
-                <td>{{ subscriber.nextofkin.last_name }}</td>
-            </tr>
-            <tr>
-                <th scope="row">Gender:</th>
-                <td>{{ subscriber.nextofkin.gender }}</td>
-            </tr>
-            <tr>
-                <th scope="row">Relationship:</th>
-                <td>{{ subscriber.nextofkin.relationship }}</td>
-            </tr>
-            <tr>
-                <th scope="row">Address:</th>
-                <td>{{ subscriber.nextofkin.address }}</td>
-            </tr>
-            <tr>
-                <th scope="row">Phone number:</th>
-                <td>{{ subscriber.nextofkin.phone_number }}</td>
-            </tr>
-
-            </tbody>
-        </table>
+{#        <p class="bg-faded" style="padding: 5px">Next of kin</p>#}
+{#        <table class="table table-striped table-hover">#}
+{#            <tbody>#}
+{#            <tr>#}
+{#                <th scope="row">First name:</th>#}
+{#                <td>{{ subscriber.nextofkin.first_name }}</td>#}
+{#            </tr>#}
+{#            <tr>#}
+{#                <th scope="row">Last name:</th>#}
+{#                <td>{{ subscriber.nextofkin.last_name }}</td>#}
+{#            </tr>#}
+{#            <tr>#}
+{#                <th scope="row">Gender:</th>#}
+{#                <td>{{ subscriber.nextofkin.gender }}</td>#}
+{#            </tr>#}
+{#            <tr>#}
+{#                <th scope="row">Relationship:</th>#}
+{#                <td>{{ subscriber.nextofkin.relationship }}</td>#}
+{#            </tr>#}
+{#            <tr>#}
+{#                <th scope="row">Address:</th>#}
+{#                <td>{{ subscriber.nextofkin.address }}</td>#}
+{#            </tr>#}
+{#            <tr>#}
+{#                <th scope="row">Phone number:</th>#}
+{#                <td>{{ subscriber.nextofkin.phone_number }}</td>#}
+{#            </tr>#}
+{##}
+{#            </tbody>#}
+{#        </table>#}
         <p class="bg-faded" style="padding: 5px">Registered sims</p>
         <table class="table table-striped table-hover">
             <tbody>
